# xcode-kotlin

./: .gitignore
KotlinPlugin/: CMakeLists.txt  language.cpp  language.h  library.cpp  library.h  run.sh
LLDBPlugin/: run.py  run.sh
LLDBPlugin/touchlab_kotlin_lldb/: __init__.py
LLDBPlugin/touchlab_kotlin_lldb/cache/: __init__.py
LLDBPlugin/touchlab_kotlin_lldb/commands/: FieldTypeCommand.py  KonanGlobalsCommand.py  SymbolByNameCommand.py  TypeByAddressCommand.py
LLDBPlugin/touchlab_kotlin_lldb/stepping/: KonanHook.py
LLDBPlugin/touchlab_kotlin_lldb/types/: KonanArraySyntheticProvider.py  KonanBaseSyntheticProvider.py  KonanListSyntheticProvider.py  KonanObjectSyntheticProvider.py  KonanProxyTypeProvider.py  KonanStringSyntheticProvider.py  KonanZerroSyntheticProvider.py  __init__.py  base.py  select_provider.py
LLDBPlugin/touchlab_kotlin_lldb/util/: DebuggerException.py  expression.py  kotlin_object_to_cstring.py  log.py
data/Kotlin.ideplugin/Contents/Resources/: konan_lldb.py  lldbinit
